make map and network full screen height. Fixes #25
also prevent postq from having horizontal scrollbar

--- a/css/main.css
+++ b/css/main.css
@@ -6,10 +6,12 @@ html,body {
 	line-height: 1.25em;
 }
 #graph-container {
-	width: 100%;
-	height: 800px;
+	position: absolute;
+	top: 15px;
+	bottom: 15px;
+	right: 15px;
+	left: 15px;
 	background-color: #fff;
-	margin: auto;
 }
 #main-panel {
   margin-top: 50px;
@@ -138,7 +140,6 @@ path:hover {
 	left:0;
 	top:0;
 	padding: 20px;
-	width: 100%;
 	z-index: 101;
 	background-color: #FFF;
 }
